[gd_scene load_steps=2 format=3 uid="uid://cqr5y8vx2h3pk"]

[ext_resource type="Script" path="res://menu_pausa.gd" id="1_menu_pausa"]

[node name="MenuPausa" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_menu_pausa")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="PainelCentral" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PainelCentral"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Titulo" type="Label" parent="PainelCentral/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "JOGO PAUSADO"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="PainelCentral/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="BtnContinuar" type="Button" parent="PainelCentral/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Continuar"

[node name="BtnOpcoes" type="Button" parent="PainelCentral/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Opções"

[node name="BtnMenuPrincipal" type="Button" parent="PainelCentral/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Menu Principal"

[connection signal="pressed" from="PainelCentral/VBoxContainer/BtnContinuar" to="." method="_on_btn_continuar_pressed"]
[connection signal="pressed" from="PainelCentral/VBoxContainer/BtnOpcoes" to="." method="_on_btn_opcoes_pressed"]
[connection signal="pressed" from="PainelCentral/VBoxContainer/BtnMenuPrincipal" to="." method="_on_btn_menu_principal_pressed"]
